--- a/templates/header.html
+++ b/templates/header.html
@@ -6,14 +6,7 @@
         <title>%(set_name)s</title>
         <link href='/css/bootstrap.min.css' rel='stylesheet'>
         <link href='/css/bootstrap-responsive.min.css' rel='stylesheet'>
-        <style>
-h3 {
-    font-size: 14px;
-}
-.thumbnails .span4:nth-child(3n+1) {
-    margin-left: 0;
-}
-        </style>
+        <link href='/css/style.css' rel='stylesheet'>
     </head>
     <body>
         <div class='container-fluid'>
