--- a/templates/header.html
+++ b/templates/header.html
@@ -6,7 +6,7 @@
         <title>%(set_name)s</title>
         <link href='/css/bootstrap.min.css' rel='stylesheet'>
         <link href='/css/bootstrap-responsive.min.css' rel='stylesheet'>
-        <link href='/css/style.css' rel='stylesheet'>
+        <link href='/css/movies.css' rel='stylesheet'>
     </head>
     <body>
         <div class='container-fluid'>
