--- a/templates/piece.html
+++ b/templates/piece.html
@@ -3,7 +3,9 @@
         <a href="%(movie_path)s">
             <img src="%(thumbnail_path)s" alt='' width='600'/>
         </a>
-        <h3><a href="%(movie_path)s">%(movie_name)s</a></h3>
-        <a href="%(subtitle_path)s">Phụ đề</a>
+        <div class='links'>
+            <h3><a href="%(movie_path)s">%(movie_name)s</a></h3>
+            <a href="%(subtitle_path)s">Phụ đề</a>
+        </div>
     </div>
 </li>
