--- a/templates/footer.html
+++ b/templates/footer.html
@@ -3,5 +3,6 @@
         </div> <!-- end container -->
         <script src='/js/jquery.min.js'></script>
         <script src='/js/bootstrap.min.js'></script>
+        <script src='/js/movies.js'></script>
     </body>
 </html>
