maybe it is working now

--- a/templates/header.html
+++ b/templates/header.html
@@ -12,4 +12,4 @@
         <div class='container-fluid'>
             <h1>%(set_name)s</h1>
             <div class='row-fluid'>
-                <ul class='thumbnails'>
+                <ul id='movies' class='thumbnails'>
