--- a/templates/piece.html
+++ b/templates/piece.html
@@ -1,11 +1,11 @@
-<li class='span4'>
+<li class='movie span4'>
     <div class='thumbnail'>
         <a href="%(movie_path)s">
             <img src="%(thumbnail_path)s" alt='' width='600'/>
         </a>
         <div class='links'>
-            <h3><a href="%(movie_path)s">%(movie_name)s</a></h3>
-            <a href="%(subtitle_path)s">Phụ đề</a>
+            <h3><a class="movie_path" href="%(movie_path)s">%(movie_name)s</a></h3>
+            <a class="subtitle_path" href="%(subtitle_path)s">Phụ đề</a>
         </div>
     </div>
 </li>
