should be working now, but somehow it is not

--- a/templates/piece.html
+++ b/templates/piece.html
@@ -4,8 +4,8 @@
             <img src="%(thumbnail_path)s" alt='' width='600'/>
         </a>
         <div class='links'>
-            <h3><a class="movie_path" href="%(movie_path)s">%(movie_name)s</a></h3>
-            <a class="subtitle_path" href="%(subtitle_path)s">Phụ đề</a>
+            <h3><a class="moviePath" href="%(movie_path)s">%(movie_name)s</a></h3>
+            <a class="subtitlePath" href="%(subtitle_path)s">Phụ đề</a>
         </div>
     </div>
 </li>
