--- a/templates/piece.html
+++ b/templates/piece.html
@@ -5,7 +5,7 @@
         </a>
         <div class='links'>
             <h3><a class="moviePath" href="%(movie_path)s">%(movie_name)s</a></h3>
-            <a class="subtitlePath" href="%(subtitle_path)s">Phụ đề</a>
+            <a class="subtitlePath" href="%(subtitle_path)s">%(Subtitle)s</a>
         </div>
     </div>
 </li>
